# llm_circuit_analysis

./: .gitignore  LICENSE  README.md  extraction_analysis.py  function_extraction_from_paper.sh  merge_chunks.py  merge_extraction_results.py  neuron_interpretation.py  neuron_interpretation.sh  neuron_interpretation_merge_results.py  pyproject.toml
circuit_analysis/: circuit_step1_pairwise.py  circuit_step2_per_target.py  circuit_step3_synthesis.py  circuit_utils.py  dump_pair_prompt.py  run_pipeline.sh  run_step1.sh  run_step2.sh  run_step3.sh  select_types.py
docs/: get_paper_to_hpc.md  hpc_llama_setup.md
function_extraction_from_papers/: function_extraction_from_paper.py  function_extraction_from_paper.sh  normalize_cell_types.py  synonyms.py
function_extraction_from_papers/extraction_results/: extracted.csv  extracted.jsonl  papers_with_names.csv
llm_core/: __init__.py  cli.py  dump.py  llama_server.py  parsing.py  providers.py  retry.py
neuron_interpretation/: neuron_interpretation.py  neuron_interpretation.sh  neuron_interpretation_merge_results.py
paper_discovery/: match_and_download_pdfs.py  match_and_download_pdfs.sh  paper_discovery_hpc.py  paper_discovery_hpc.sh  seeds.txt
